# eyantra_drone

./: .travis.yml  LICENSE  README.md
drone_client/: CMakeLists.txt  package.xml
drone_client/include/eyantra_drone/: Protocol.h
drone_client/msg/: eyantra_drone.msg
drone_client/src/: Communication.cpp  DroneCam.cpp  DroneNode.cpp  DroneSwarm.cpp  Protocol.cpp
drone_server/: CMakeLists.txt  package.xml
drone_server/launch/: drone_comb.launch
drone_server/scripts/: data_via_rosservice.py  key_handling.py
drone_server/src/: drone_server.cpp
edrone_client/: CMakeLists.txt  package.xml
edrone_client/include/eyantra_drone/: Common.h  Communication.h  JoystickClient.h  Position.h  Protocol.h
edrone_client/src/: Communication.cpp  DroneCam.cpp  DroneNode.cpp  DroneSwarm.cpp  Protocol.cpp
edrone_server/: CMakeLists.txt  package.xml
edrone_server/launch/: drone_cam.launch  drone_comb.launch  drone_swarm.launch
edrone_server/scripts/: data_via_rosservice.py  drone_teleop.py  key_handling.py
edrone_server/src/: drone_server.cpp
eyantra_drone/: CMakeLists.txt  package.xml
pluto_drone/: CMakeLists.txt  package.xml
plutodrone/: CMakeLists.txt  package.xml
plutodrone/include/plutodrone/: Common.h  Communication.h  Protocol.h  liblewei.h
plutodrone/msg/: PlutoMsg.msg
plutodrone/src/: Communication.cpp  PlutoCam.cpp  PlutoNode.cpp  PlutoSwarm.cpp  Protocol.cpp
plutodrone/srv/: PlutoPilot.srv
plutoserver/: CMakeLists.txt  package.xml
plutoserver/launch/: drone_comb.launch
plutoserver/scripts/: data_via_rosservice.py  drone_testing_Key.py  key_command.py  key_handling.py
plutoserver/src/: plutoserver.cpp
