<?xml version="1.0"?>
<package>
  <name>edrone_client</name>
  <version>1.0.1</version>
  <description>The eyantra_drone package</description>

  <maintainer email="simranjeet@cse.iitb.ac.in">Simranjeet Singh</maintainer>

  <author email="simranjeet@cse.iitb.ac.in">Simranjeet Singh</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sdl2</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
