<?xml version="1.0"?>
<package>
  <name>pluto_drone</name>
  <version>0.0.1</version>
  <description>drone package</description>

  <maintainer email="simranbhangu01@gmail.com">Simmu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
   <run_depend>plutoclient</run_depend>
  <run_depend>plutodrone</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
     <metapackage/>
  </export>
</package>
